gccida/c1/combinable_i3pat
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combinable_i3pat/src/combine.c:1790:38: error: expected expression
while ( combinable_i3pat( i3, ( rtx *)&rtwint[v12], i2dest, i1dest, i1_not_in_src, pi3dest_killed) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combinable_i3pat/src/combine.c:1805:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
in = (  struct rtx_def *)v14[1]; 
                         ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combinable_i3pat/src/combine.c:1814:60: error: use of undeclared identifier 'machine_mode'
if ( rtuint <= 0x34 && !ix86_hard_regno_mode_ok( rtuint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)i)) ) 
                                                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combinable_i3pat/src/combine.c:1814:75: error: expected expression
if ( rtuint <= 0x34 && !ix86_hard_regno_mode_ok( rtuint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)i)) ) 
                                                                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combinable_i3pat/src/combine.c:1823:38: error: expected expression
if ( !reg_referenced_p( rtx, *( rtx *)&i3[2]) ) 
                                     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combinable_i3pat/src/obj/combine.o] Error 1
